2000-02-28  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (main): Don't output debugging messages if debugging
	wasn't turned on.

2000-02-10  Ken Raeburn  <raeburn@mit.edu>

	* login.c (main): Only destroy xtra_creds if non-null.  (Patch
	from Richard Basch.)

2000-02-04  Tom Yu  <tlyu@mit.edu>

	* login.c (main): Reorder some control flow to avoid security hole
	if KRB4_GET_TICKETS is not defined.

2000-01-27  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (speeds): Added some comments from net recommending
	not extending the list to higher values.

1999-11-23  Ken Raeburn  <raeburn@mit.edu>

	* login.c (k_init): Call krb5_init_secure_context instead of
	krb5_init_context and krb5_secure_config_files.

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

1999-09-01  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (main): Error out if -D isn't followed by another
	argument.  Based on patch from Brad Thompson.

	* krshd.c (v4_kdata, v4_ticket): Don't define if KRB5_KRB4_COMPAT
	is not defined.  Patch from Brad Thompson.

	* kcmd.c (kcmd): If krb5_get_credentials returns a nonzero error
	code, print an error message before returning.

	* krlogin.c (main): If ospeed is outside of compiled-in table
	index range but not high enough to be a baud rate, use the highest
	rate in the table.

1999-08-24  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (kshd): Remove $(LOGINLIBS) from kshd dependencies.

1999-08-02  Ken Raeburn  <raeburn@mit.edu>
	and Brad Thompson  <yak@mit.edu>

	Patches from Brad Thompson for building without krb4
	compatibility:
	* krshd.c: Include sys/socket.h and netdb.h if KRB5_KRB4_COMPAT
	isn't defined.
	(doit): Cast pointer argument to getsockname.
	(recvauth): Do krb4 stuff only if KRB5_KRB4_COMPAT is defined;